committing implementation of xpath 3.1 function fn:doc-available and few related working test cases, and few improvements to implementation of fn:doc function